[package]
name = "neuronify"
version = "2.0.0"
edition = "2021"

[dependencies]
visula = { git = "https://github.com/dragly/visula", rev = "7a47653a7ece037b9f19cb65628837f9894aeba0" }
visula_derive = { git = "https://github.com/dragly/visula", rev = "7a47653a7ece037b9f19cb65628837f9894aeba0" }
visula_core = { git = "https://github.com/dragly/visula", rev = "7a47653a7ece037b9f19cb65628837f9894aeba0" }
wgpu = { version = "0.18", features = ["webgl"] }
glam = { version = "0.24", features = ["bytemuck"] }
naga = { version = "0.13", features = ["wgsl-in", "wgsl-out"] }
uuid = { version = "1.3.3", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "js",
] }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
winit = { version = "0.28" }
egui = "0.23"
egui_plot = "0.23"
egui_wgpu_backend = "0.27.0"
egui_winit_platform = "0.20"
pyo3 = "0.20.0"
numpy = { version = "0.20.0", features = ["nalgebra"] }
pollster = "0.3.0"
itertools = "0.10.5"
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.87"
cgmath = "0.17.0"
js-sys = "0.3"
trajan = "0.1.0"
structopt = "0.3"
ndarray = "0.15.3"
num = "0.3"
gltf = "0.15.0"
itertools-num = "0.1.3"
syn = { version = "1.0.80", features = ["parsing"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
crude-profiler = "0.1.7"
oxifive = { git = "https://github.com/dragly/oxifive", rev = "9f4314b587ef51029033288d95b4a44e40b0ddb5" }
hecs = "0.10.3"
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
