[package]
name = "neuronify"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
visula = { git = "https://github.com/dragly/visula", rev = "aa6c69f067011beb7c38643592f04bbe5810ad6a" }
visula_derive = { git = "https://github.com/dragly/visula", rev = "aa6c69f067011beb7c38643592f04bbe5810ad6a" }
visula_core = { git = "https://github.com/dragly/visula", rev = "aa6c69f067011beb7c38643592f04bbe5810ad6a" }
wgpu = { version = "0.19", features = ["webgl"] }
glam = { version = "0.24", features = ["bytemuck"] }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
egui = "0.26"
egui_plot = "0.26"
pollster = "0.3.0"
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.92"
cgmath = "0.17.0"
js-sys = "0.3"
trajan = "0.1.0"
structopt = "0.3"
ndarray = "0.15.3"
num = "0.3"
syn = { version = "1.0.80", features = ["parsing"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
crude-profiler = "0.1.7"
oxifive = { git = "https://github.com/dragly/oxifive", rev = "9f4314b587ef51029033288d95b4a44e40b0ddb5" }
hecs = "0.10.3"
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
