[package]
name = "neuronify-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
visula = { git = "https://github.com/dragly/visula", rev = "d964607cd7cfbf71172314baab1832f6e1b9f523" }
visula_derive = { git = "https://github.com/dragly/visula", rev = "d964607cd7cfbf71172314baab1832f6e1b9f523" }
visula_core = { git = "https://github.com/dragly/visula", rev = "d964607cd7cfbf71172314baab1832f6e1b9f523" }
wgpu = { version = "0.19", features = ["webgl"] }
glam = { version = "0.24", features = ["bytemuck", "serde"] }
bytemuck = { version = "1.4", features = ["derive"] }
log = "0.4"
egui = "0.26"
egui_plot = "0.26"
pollster = "0.3.0"
futures = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "=0.2.92"
cgmath = "0.17.0"
js-sys = "0.3"
ndarray = "0.15.3"
num = "0.3"
syn = { version = "1.0.80", features = ["parsing"] }
quote = "1.0.10"
proc-macro2 = "1.0.29"
crude-profiler = "0.1.7"
hecs = { version = "0.10.3", features = [
  "column-serialize",
  "serde",
  "row-serialize",
] }
strum = { version = "0.25.0", features = ["derive"] }
rand = "0.8.5"
serde_derive = "1.0.204"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
postcard = { version = "1.0.8", features = ["use-std"] }
web-sys = { version = "0.3.69", features = ["Request", "Response", "RequestInit", "Headers"] }
chrono = { version = "0.4.38", features = ["serde"] }
rfd = "0.14.1"
winit = "0.29"
